--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,8 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  --ccp-modal-top-border-color: rgb(8 145 178);
 }
 
 /* semantic color variables for this project */
