--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -75,3 +75,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+@font-face {
+  font-family: "Shentox";
+  src: url('@/assets/fonts/Shentox-light.ttf') format('truetype');
+}
