--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -63,7 +63,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: white;
+  /* color: var(--color-text);  */
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
@@ -80,4 +81,42 @@ body {
 @font-face {
   font-family: "Shentox";
   src: url('@/assets/fonts/Shentox-light.ttf') format('truetype');
+}
+
+.radio {
+  /* margin: 0.5rem; */
+}
+
+.radio input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+}
+
+.radio input[type="radio"]+.radio-label:before {
+  content: '';
+  background: black;
+  border-radius: 100%;
+  border: 1px solid grey;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  position: relative;
+  margin-right: .5em;
+  vertical-align: top;
+  text-align: center;
+  transition: all 250ms ease;
+}
+
+.radio input[type="radio"]:checked+.radio-label:before {
+  background-color: rgb(8 145 178);
+  box-shadow: inset 0 0 0 3px black;
+}
+
+.radio input[type="radio"]:focus+.radio-label:before {
+  outline: none;
+  border-color: #3197ee;
+}
+
+.radio input[type="radio"]+.radio-label:empty:before {
+  margin-right: 0;
 }
