--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,7 +64,7 @@
   border-top: 1px;
   border-color: var(--ccp-modal-top-border-color);
   border-style: solid;
-  padding: .5em;
+  padding: 1em;
   margin: .5em;
 }
 
