--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -150,6 +150,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: bold;
 }
 
 .radio input[type="radio"] {
